[package]
name = "any-tunnel2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["tunnel-wait-ack"]
tunnel-wait-ack = []

[dependencies]
anyhow = { git = "https://github.com/yefy/anyhow.git", branch = "master" }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
lazy_static = "1.4.0"
log = "0.4.14"
libc = "0.2.109"
toml = "0.5.8"
log4rs = "1.0.0"
bytes = "1.1.0"
async-trait = "0.1.52"
hashbrown = "0.11.2"
async-channel = "1.6.1"